--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,7 @@ on:
 
 env:
   MY_VAR: ${{ secrets.MY_VAR }}
+  ENV_MAIN_SECRET: ${{ secrets.ENV_MAIN_SECRET }}
 
 jobs:
   # This workflow contains a single job called "build"
@@ -35,3 +36,5 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           echo $MY_VAR
+          echo $ENV_MAIN_SECRET
+
