--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,13 +15,13 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 
-env:
-  MY_VAR: ${{ secrets.MY_VAR }}
-
+  #env:
+  #MY_VAR: ${{ secrets.MY_VAR }}
+  # ENV_MAIN_SECRET: '${{ secrets.ENV_MAIN_SECRET }}'
+  
 jobs:
   # This workflow contains a single job called "build"
   build:
-    environment: Env_main
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,6 +29,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+      - name: condition 1
+        if: github.ref == 'refs/heads/main'
+        env: 
+          MY_VAR: ${{ secrets.ENV_MAIN }}
+        run: echo $MY_VAR
+      
+      - name: condition 2
+        if: github.ref == 'refs/heads/dev'
+        env: 
+          MY_VAR: ${{ secrets.ENV_DEV }}
+        run: echo $MY_VAR
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -36,4 +48,3 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           echo $MY_VAR
-          echo $ENV_MAIN_SECRET
