--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env: 
           MY_VAR: ${{ secrets.ENV_MAIN }}
-        run: echo $MY_VAR
+        run: echo $MY_VAR >> "$GITHUB_ENV"
       
       - name: condition 2
         if: github.ref == 'refs/heads/dev'
