--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,21 +32,23 @@ jobs:
       
       - name: condition 1
         if: github.ref == 'refs/heads/main'
-        env: 
-          MY_VAR: ${{ secrets.ENV_MAIN }}
+        #env: 
+        # MY_VAR: ${{ secrets.ENV_MAIN }}
         run: echo "MY_VAR=${{ secrets.ENV_MAIN }}" >> "$GITHUB_ENV"
       
-      - name: condition 2
-        if: github.ref == 'refs/heads/dev'
-        env: 
-          MY_VAR: ${{ secrets.ENV_DEV }}
-        run: echo $MY_VAR
+      #- name: condition 2
+       # if: github.ref == 'refs/heads/dev'
+        #env: 
+         # MY_VAR: ${{ secrets.ENV_DEV }}
+        #run: echo $MY_VAR
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          #echo $MY_VAR
-          echo env.MY_VAR
+          if: env.MY_VAR == 'main'
+          run: echo "MY_VAR is main"
+          if: env.MY_VAR == 'dev'
+          run: echo "MY_VAR is dev"
           
