--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,13 +42,13 @@ jobs:
          # MY_VAR: ${{ secrets.ENV_DEV }}
         #run: echo $MY_VAR
 
+      - name: Main branch ?
+        if: env.MY_VAR == 'main'
+        run: echo "MY_VAR is main"
+        
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          if: env.MY_VAR == 'main'
-          run: echo "MY_VAR is main"
-          if: env.MY_VAR == 'dev'
-          run: echo "MY_VAR is dev"
           
