--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,19 +32,19 @@ jobs:
       
       - name: condition 1
         if: github.ref == 'refs/heads/main'
-        #env: 
-        # MY_VAR: ${{ secrets.ENV_MAIN }}
         run: echo "MY_VAR=${{ secrets.ENV_MAIN }}" >> "$GITHUB_ENV"
       
-      #- name: condition 2
-       # if: github.ref == 'refs/heads/dev'
-        #env: 
-         # MY_VAR: ${{ secrets.ENV_DEV }}
-        #run: echo $MY_VAR
+      - name: condition 1
+        if: github.ref == 'refs/heads/dev'
+        run: echo "MY_VAR=${{ secrets.ENV_DEV }}" >> "$GITHUB_ENV"
 
       - name: Main branch ?
         if: env.MY_VAR == 'main'
-        run: echo "MY_VAR is main"
+        run: echo "MY_VAR is MaiN"
+        
+      - name: Dev branch ?
+        if: env.MY_VAR == 'dev'
+        run: echo "MY_VAR is DeV"
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
